# InterstellarAssault

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
Dx11/DirectXTK/: DirectXTK_Desktop_2022.vcxproj
Dx11/DirectXTK/Audio/: DirectXTKAudio_Desktop_2022_Win7.vcxproj
Dx11/InterstellarAssault/: InterstellarAssault.sln  count_lines.bat
Dx11/InterstellarAssault/InterstellarAssault/: AudioManager.cpp  AudioManager.h  D3D.cpp  D3DUtil.cpp  D3DUtil.h  Enemy.cpp  Enemy.h  Game.cpp  Game.h  GameFunctions.lua  GameOverMode.h  GameVariables.lua  Input.h  InterstellarAssault.vcxproj  InterstellarAssault.vcxproj.filters  LuaHelper.cpp  LuaHelper.h  MainMenuMode.h  ModeMgr.cpp  ModeMgr.h  Model.cpp  Model.h  PlayMode.cpp  Player.cpp  Player.h  ScoreMenuMode.cpp  ScoreMenuMode.h  ScoreSystem.cpp  Script.lua  SettingsMenuMode.cpp  SettingsMenuMode.h  Shelter.cpp  Shelter.h  Singleton.h  Sprite.cpp  TexCache.cpp  TexCache.h  Text.cpp  TutorialMenuMode.cpp  UIButton.cpp  (+6 more)
Dx11/InterstellarAssault/InterstellarAssault/data/fonts/: retrotech-60.spritefont  retrotech.spritefont
Dx11/InterstellarAssault/InterstellarAssault/data/models/: ArcadeBanner.dds  alien.fbx  arcademachine.fbx
Dx11/InterstellarAssault/InterstellarAssault/data/shaders/: PSUnlitTex.cso  TextureVS.cso
Dx11/InterstellarAssault/InterstellarAssault/data/sprites/: crab.dds  laser.dds  octopus.dds  ufo.dds
Dx11/assimp-5.2.5prebuilt/contrib/zlib/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  cmake_install.cmake  zlib.sln  zlibstatic.vcxproj  zlibstatic.vcxproj.filters
Utility/ConvertToDDS/: ConvertDDS.bat
Utility/shelters/: shelter-1.dds  shelter-2.dds  shelter-3.dds  shelter-4.dds  shelter-5.dds  shelter-6.dds  shelter-7.dds  shelter-8.dds  shelter-9.dds  shelter.dds
data/debug/: collision.dds
data/fonts/: vcr.spritefont
data/models/: arcade.fbx  meshtest.fbx
data/scripts/: GameFunctions.lua  GameVariables.lua
data/shaders/: PSLitNoTex.cso  PSLitTex.cso  PSUnlitNoTex.cso
data/sprites/: missile.dds  ship.dds  ship2.dds  squid.dds
data/ui/: arrows.dds
src/: Constants.hlsl  D3D.h  Enemy.cpp  FX.cpp  FX.h  FontCache.cpp  FontCache.h  Game.cpp  Game.h  GameObj.cpp  GameObj.h  GameOverMode.cpp  Input.cpp  IntroMode.cpp  IntroMode.h  LightHelper.hlsl  LuaHelper.cpp  LuaHelper.h  MainMenuMode.cpp  Mesh.cpp  Mesh.h  ModeMgr.cpp  ModeMgr.h  PSCore.hlsl  PlayMode.cpp  PlayMode.h  Player.cpp  ScoreSystem.h  ShaderTypes.h  Sprite.h  Text.h  TutorialMenuMode.h  UIButton.h  UICounter.cpp  UIManager.cpp  WindowUtils.cpp  WindowUtils.h  constants.h  main.cpp
